--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -66,6 +66,14 @@
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
+    <Compile Include="Migrations\202206142144297_mig_writer_edit.cs" />
+    <Compile Include="Migrations\202206142144297_mig_writer_edit.designer.cs">
+      <DependentUpon>202206142144297_mig_writer_edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202206142232105_mig_writertitle_add.cs" />
+    <Compile Include="Migrations\202206142232105_mig_writertitle_add.designer.cs">
+      <DependentUpon>202206142232105_mig_writertitle_add.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -78,6 +86,14 @@
       <Project>{fb640dbf-e990-4a6d-a58a-fe2a5d5bb7ad}</Project>
       <Name>EntityLayer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202206142144297_mig_writer_edit.resx">
+      <DependentUpon>202206142144297_mig_writer_edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206142232105_mig_writertitle_add.resx">
+      <DependentUpon>202206142232105_mig_writertitle_add.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
